fix(OutlineItem, ListItem): prevent layout breaking with button rendering

--- a/packages/bezier-react/src/components/ListItem/ListItem.module.scss
+++ b/packages/bezier-react/src/components/ListItem/ListItem.module.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   display: flex;
   align-items: center;
+  text-align: inherit;
 
   box-sizing: border-box;
 
@@ -42,6 +43,7 @@
   }
 
   &:where(.clickable) {
+    width: 100%;
     cursor: pointer;
   }
 
