--- a/packages/bezier-react/src/components/OutlineItem/OutlineItem.module.scss
+++ b/packages/bezier-react/src/components/OutlineItem/OutlineItem.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
 
+  text-align: inherit;
+
   box-sizing: border-box;
   height: 28px;
   padding: 0 6px 0 calc(var(--b-outline-item-indent) + 6px);
@@ -16,6 +18,7 @@
     color var(--transition-s);
 
   &:where(.clickable) {
+    width: 100%;
     cursor: pointer;
   }
 
